--- a/index.html
+++ b/index.html
@@ -1,314 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
 <title>Katy Math</title>
+
 <script src="https://cdn.tailwindcss.com"></script>
 
-<style>
-/* Animated token */
-.token-spin {
-  animation: spin 3s linear infinite;
-}
-@keyframes spin {
-  0% { transform: rotateY(0deg); }
-  100% { transform: rotateY(360deg); }
+<script type="module">
+/* ---------------- FIREBASE ---------------- */
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import { getFirestore, doc, getDoc, setDoc, updateDoc, increment } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+const firebaseConfig = {
+  apiKey: "YOUR_KEY",
+  authDomain: "math-katy.firebaseapp.com",
+  projectId: "math-katy",
+};
+
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
+
+/* ---------------- GLOBAL STATE ---------------- */
+let userData = null;
+let activeSeconds = 0;
+let visible = true;
+let sessionStart = Date.now();
+
+/* ---------------- TAB DETECTION ---------------- */
+document.addEventListener("visibilitychange", () => {
+  visible = !document.hidden;
+});
+
+/* ---------------- AUTH ---------------- */
+onAuthStateChanged(auth, async (user) => {
+  if (!user) {
+    document.getElementById("auth").classList.remove("hidden");
+    document.getElementById("app").classList.add("hidden");
+    return;
+  }
+
+  const ref = doc(db, "users", user.uid);
+  const snap = await getDoc(ref);
+
+  if (!snap.exists()) {
+    document.getElementById("onboarding").classList.remove("hidden");
+    window.completeOnboarding = async () => {
+      const data = {
+        first: fname.value,
+        last: lname.value,
+        grade: grade.value,
+        credits: 0,
+        totalMinutes: 0,
+        weeklyMinutes: 0,
+        streak: 0,
+        lastVisit: new Date().toDateString()
+      };
+      await setDoc(ref, data);
+      location.reload();
+    };
+    return;
+  }
+
+  userData = snap.data();
+  document.getElementById("credits").innerText = userData.credits;
+  document.getElementById("app").classList.remove("hidden");
+
+  startTracking();
+  renderNextReward();
+  renderStreak();
+  renderLeaderboard();
+});
+
+/* ---------------- LOGOUT ---------------- */
+window.logOut = async () => {
+  await signOut(auth);
+  location.reload();
+};
+
+/* ---------------- TIME TRACKING ---------------- */
+function startTracking() {
+  setInterval(async () => {
+    if (!visible) return;
+
+    activeSeconds++;
+    if (activeSeconds % 60 === 0) {
+      await updateDoc(doc(db, "users", auth.currentUser.uid), {
+        totalMinutes: increment(1),
+        weeklyMinutes: increment(1)
+      });
+    }
+    document.getElementById("timer").innerText =
+      Math.floor(activeSeconds / 60) + " min";
+  }, 1000);
 }
 
-/* Iframe loader */
-.loader {
-  border: 4px solid #2d3748;
-  border-top: 4px solid #22c55e;
-  border-radius: 50%;
-  width: 48px;
-  height: 48px;
-  animation: spin 1s linear infinite;
+/* ---------------- DAILY STREAK ---------------- */
+async function renderStreak() {
+  const today = new Date().toDateString();
+  let streak = userData.streak || 0;
+
+  if (userData.lastVisit !== today) {
+    streak = Math.min(streak + 1, 30);
+    const reward = Math.min(streak * 10, 100);
+
+    await updateDoc(doc(db, "users", auth.currentUser.uid), {
+      streak,
+      credits: increment(reward),
+      lastVisit: today
+    });
+
+    document.getElementById("credits").innerText =
+      userData.credits + reward;
+  }
+
+  document.getElementById("streakText").innerText =
+    `Day ${streak}/30 — +${Math.min(streak * 10, 100)} credits`;
+}
+
+/* ---------------- NEXT REWARD ---------------- */
+function renderNextReward() {
+  let next = "Loyal Tier (100 credits)";
+  if (userData.credits >= 100) next = "VIP Tier (200 credits)";
+  if (userData.credits >= 200) next = "Ultimate Tier (500 credits)";
+
+  document.getElementById("nextReward").innerText = next;
+}
+
+/* ---------------- IFRAME LOADING ---------------- */
+window.openLink = (url) => {
+  const loader = document.getElementById("loader");
+  const frame = document.getElementById("iframe");
+
+  loader.classList.remove("hidden");
+  frame.classList.add("hidden");
+
+  setTimeout(() => {
+    frame.src = url;
+  }, 2500);
+
+  frame.onload = () => {
+    loader.classList.add("hidden");
+    frame.classList.remove("hidden");
+    document.getElementById("feedback").classList.remove("hidden");
+  };
+};
+
+/* ---------------- LEADERBOARD ---------------- */
+async function renderLeaderboard() {
+  document.getElementById("leaderboard").innerText =
+    "Leaderboard loading (demo)";
+}
+</script>
+
+<style>
+@keyframes spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+.token {
+  animation: spin 6s linear infinite;
 }
 </style>
 </head>
 
-<body class="bg-gray-900 text-gray-100 min-h-screen">
+<body class="bg-gray-900 text-white">
 
-<!-- HEADER -->
-<header id="header" class="hidden fixed top-0 w-full bg-gray-800 z-40 shadow">
-  <div class="max-w-6xl mx-auto flex justify-between items-center p-4">
-    <div class="flex items-center gap-4">
-      <div class="flex items-center gap-2">
-        <div class="token-spin text-yellow-400 text-xl">🪙</div>
-        <span id="creditCount">0</span>
-      </div>
-      <button onclick="showTierDetails()" class="text-sm text-blue-400 underline">
-        Tier: <span id="tierLabel">Basic</span>
-      </button>
-    </div>
+<!-- AUTH -->
+<div id="auth" class="hidden p-10 text-center">
+  <h1 class="text-3xl font-bold">Sign In</h1>
+</div>
 
-    <div class="flex gap-4">
-      <button onclick="navigate('dashboard')">Dashboard</button>
-      <button onclick="navigate('tokens')">Tokens</button>
-      <button onclick="navigate('account')">Account</button>
-      <button onclick="logOut()" class="bg-red-600 px-3 py-1 rounded">Logout</button>
-    </div>
+<!-- ONBOARDING -->
+<div id="onboarding" class="hidden p-10 text-center">
+  <h2 class="text-2xl mb-4">Welcome</h2>
+  <input id="fname" placeholder="First Name" class="p-2 text-black"><br><br>
+  <input id="lname" placeholder="Last Name" class="p-2 text-black"><br><br>
+  <input id="grade" placeholder="Grade" class="p-2 text-black"><br><br>
+  <button onclick="completeOnboarding()" class="bg-blue-600 px-4 py-2 rounded">
+    Continue
+  </button>
+</div>
+
+<!-- APP -->
+<div id="app" class="hidden p-6 space-y-6">
+
+<header class="flex justify-between items-center">
+  <div class="flex items-center gap-4">
+    <div class="token w-10 h-10 bg-yellow-400 rounded-full"></div>
+    <div>Credits: <span id="credits">0</span></div>
   </div>
+  <button onclick="logOut()" class="bg-red-600 px-4 py-2 rounded">Logout</button>
 </header>
 
-<!-- MAIN -->
-<main id="appContainer" class="hidden pt-24 max-w-6xl mx-auto p-4">
+<div class="bg-black/60 p-3 rounded w-fit" id="timer">0 min</div>
 
-  <!-- DASHBOARD -->
-  <section id="dashboardPage">
-    <h2 class="text-xl mb-4">General Links</h2>
-    <div id="links" class="grid grid-cols-3 gap-4"></div>
-  </section>
+<section class="grid grid-cols-3 gap-4">
+  <button onclick="openLink('https://wikipedia.org')" class="bg-blue-700 p-4 rounded">Link 1</button>
+  <button onclick="openLink('https://wikipedia.org')" class="bg-blue-700 p-4 rounded">Link 2</button>
+  <button onclick="openLink('https://wikipedia.org')" class="bg-blue-700 p-4 rounded">Link 3</button>
+</section>
 
-  <!-- TOKENS -->
-  <section id="tokensPage" class="hidden">
-    <h2 class="text-xl mb-4">Tokens & Rewards</h2>
-
-    <div class="bg-gray-800 p-6 rounded mb-6">
-      <div class="flex items-center gap-4 mb-4">
-        <div class="token-spin text-4xl">🪙</div>
-        <div>
-          <div class="text-lg font-semibold">Your Tokens</div>
-          <div class="text-sm text-gray-400">Used to unlock links & tiers</div>
-        </div>
-      </div>
-
-      <div class="mb-2">Next Unlock: <span id="nextUnlock">100</span> credits</div>
-      <div class="w-full bg-gray-700 h-3 rounded">
-        <div id="unlockProgress" class="bg-green-500 h-3 rounded"></div>
-      </div>
-    </div>
-
-    <div class="bg-gray-800 p-6 rounded">
-      <h3 class="font-semibold mb-2">How to earn</h3>
-      <ul class="text-sm text-gray-300 space-y-1">
-        <li>• +50 Welcome reward (once)</li>
-        <li>• +10 Daily login</li>
-        <li>• +1 credit per 10 active minutes</li>
-        <li>• AFK / tab hidden time does not count</li>
-      </ul>
-    </div>
-  </section>
-
-  <!-- ACCOUNT -->
-  <section id="accountPage" class="hidden">
-    <h2 class="text-xl mb-4">Account</h2>
-    <div class="bg-gray-800 p-6 rounded">
-      <div id="accountInfo"></div>
-    </div>
-  </section>
-
-</main>
-
-<!-- TIER MODAL -->
-<div id="tierModal" class="hidden fixed inset-0 bg-black bg-opacity-80 z-50 flex items-center justify-center">
-  <div class="bg-gray-800 p-6 rounded max-w-md w-full">
-    <h2 class="text-xl mb-4">Tier Details</h2>
-    <div id="tierDetails" class="text-sm text-gray-300 space-y-2"></div>
-    <button onclick="closeTierDetails()" class="mt-4 w-full bg-blue-600 py-2 rounded">Close</button>
-  </div>
+<div id="loader" class="hidden text-center text-xl animate-pulse">
+  Loading content securely…
 </div>
 
-<!-- IFRAME -->
-<div id="iframeModal" class="hidden fixed inset-0 bg-black z-50">
-  <div class="absolute top-4 left-4 text-white text-lg">
-    ⏱ <span id="iframeTimer">45:00</span>
-  </div>
+<iframe id="iframe" class="hidden w-full h-[400px] bg-white rounded"></iframe>
 
-  <button onclick="closeIframe()" class="absolute top-4 right-4 bg-red-600 px-4 py-2 rounded">Close</button>
-
-  <!-- Loader -->
-  <div id="iframeLoader" class="absolute inset-0 flex flex-col items-center justify-center bg-black">
-    <div class="loader mb-4"></div>
-    <div class="text-gray-400">Loading content…</div>
-  </div>
-
-  <iframe id="contentIframe" class="w-full h-full hidden"></iframe>
-
-  <!-- Vote -->
-  <div id="voteBox" class="hidden absolute bottom-6 left-1/2 -translate-x-1/2 bg-gray-800 p-4 rounded flex gap-4">
-    <span>Did this link work?</span>
-    <button onclick="vote(true)" class="bg-green-600 px-3 py-1 rounded">Yes</button>
-    <button onclick="vote(false)" class="bg-red-600 px-3 py-1 rounded">No</button>
-  </div>
+<div id="feedback" class="hidden text-center mt-4">
+  Did this link work?
+  <button class="bg-green-600 px-3 py-1 rounded ml-2">Yes</button>
+  <button class="bg-red-600 px-3 py-1 rounded ml-2">No</button>
 </div>
 
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-app.js";
-import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-auth.js";
-import { getFirestore, doc, setDoc, getDoc, updateDoc, increment, collection, getDocs } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-firestore.js";
+<section class="bg-gray-800 p-4 rounded">
+  <h3 class="text-xl">Next Reward</h3>
+  <p id="nextReward"></p>
+</section>
 
-const app = initializeApp({
-  apiKey: "AIzaSyA32Jc5l0jcWW9iAT3q1gUEUsthN6QkY1k",
-  authDomain: "math-katy.firebaseapp.com",
-  projectId: "math-katy"
-});
+<section class="bg-gray-800 p-4 rounded">
+  <h3 class="text-xl">Daily Streak</h3>
+  <p id="streakText"></p>
+</section>
 
-const auth = getAuth(app);
-const db = getFirestore(app);
+<section class="bg-gray-800 p-4 rounded">
+  <h3 class="text-xl">Leaderboard</h3>
+  <div id="leaderboard"></div>
+</section>
 
-let userData = null;
-let iframeSeconds = 0;
-let iframeInterval = null;
-let currentLinkId = null;
-let tabActive = true;
+</div>
 
-// ---------- AUTH STATE ----------
-onAuthStateChanged(auth, async(user)=>{
-  if(!user) return;
-
-  const ref = doc(db,"users",user.uid);
-  const snap = await getDoc(ref);
-  userData = snap.data();
-
-  header.classList.remove("hidden");
-  appContainer.classList.remove("hidden");
-
-  updateHeader();
-  renderLinks();
-  updateTokensPage();
-  updateAccount();
-});
-
-// ---------- UI ----------
-function navigate(page){
-  ["dashboard","tokens","account"].forEach(p=>{
-    document.getElementById(p+"Page").classList.add("hidden");
-  });
-  document.getElementById(page+"Page").classList.remove("hidden");
-}
-
-function updateHeader(){
-  creditCount.textContent = userData.credits;
-  tierLabel.textContent = tier();
-}
-
-function tier(){
-  const t=userData.totalEarned;
-  if(t>=1000) return "VIP";
-  if(t>=800) return "Gold";
-  if(t>=400) return "Silver";
-  return "Basic";
-}
-
-// ---------- LINKS ----------
-async function renderLinks(){
-  links.innerHTML="";
-  const linkSnap = await getDocs(collection(db,"linkVotes"));
-
-  const votes = {};
-  linkSnap.forEach(d=>{
-    votes[d.id]=d.data();
-  });
-
-  [1,2,3].forEach(i=>{
-    const v = votes["link"+i] || {yes:0,no:0};
-    links.innerHTML += `
-      <div onclick="openIframe(${i})" class="bg-gray-800 p-4 rounded cursor-pointer">
-        <div class="font-semibold">General Link ${i}</div>
-        <div class="text-xs text-gray-400 mt-2">
-          👍 ${v.yes} · 👎 ${v.no}
-        </div>
-      </div>`;
-  });
-}
-
-// ---------- IFRAME ----------
-function openIframe(id){
-  currentLinkId="link"+id;
-  iframeSeconds=0;
-  iframeModal.classList.remove("hidden");
-  iframeLoader.classList.remove("hidden");
-  contentIframe.classList.add("hidden");
-  voteBox.classList.add("hidden");
-
-  contentIframe.src="https://en.wikipedia.org/wiki/Main_Page";
-  contentIframe.onload=()=>{
-    iframeLoader.classList.add("hidden");
-    contentIframe.classList.remove("hidden");
-    setTimeout(()=>voteBox.classList.remove("hidden"),2000);
-  };
-
-  iframeInterval=setInterval(tickIframe,1000);
-}
-
-function tickIframe(){
-  if(!tabActive) return;
-  iframeSeconds++;
-  const remain = 2700-iframeSeconds;
-  iframeTimer.textContent =
-    Math.floor(remain/60)+":"+String(remain%60).padStart(2,"0");
-
-  if(iframeSeconds%600===0){
-    updateDoc(doc(db,"users",auth.currentUser.uid),{
-      credits:increment(1),
-      totalEarned:increment(1)
-    });
-    userData.credits++;
-    userData.totalEarned++;
-    updateHeader();
-    updateTokensPage();
-  }
-
-  if(remain<=0) closeIframe();
-}
-
-function closeIframe(){
-  clearInterval(iframeInterval);
-  iframeModal.classList.add("hidden");
-  contentIframe.src="";
-}
-
-// ---------- VOTING ----------
-async function vote(ok){
-  const ref = doc(db,"linkVotes",currentLinkId);
-  const snap = await getDoc(ref);
-  if(!snap.exists()){
-    await setDoc(ref,{yes: ok?1:0, no: ok?0:1});
-  }else{
-    await updateDoc(ref, ok?{yes:increment(1)}:{no:increment(1)});
-  }
-  voteBox.classList.add("hidden");
-  renderLinks();
-}
-
-// ---------- TOKENS PAGE ----------
-function updateTokensPage(){
-  let next = userData.credits<100?100:userData.credits<200?200:1000;
-  nextUnlock.textContent = next;
-  unlockProgress.style.width = Math.min((userData.credits/next)*100,100)+"%";
-}
-
-// ---------- ACCOUNT ----------
-function updateAccount(){
-  accountInfo.innerHTML = `
-    <div>Name: ${userData.firstName||""} ${userData.lastName||""}</div>
-    <div>Grade: ${userData.grade||""}</div>
-    <div>Total Earned: ${userData.totalEarned}</div>
-  `;
-}
-
-// ---------- TIER MODAL ----------
-function showTierDetails(){
-  tierModal.classList.remove("hidden");
-  tierDetails.innerHTML = `
-    <div>Basic: 3h/day · 45m/link</div>
-    <div>Silver: 5h/day · 1h/link</div>
-    <div>Gold: 6h/day · 1h15m/link</div>
-    <div>VIP: Unlimited · 1h30m/link</div>
-  `;
-}
-function closeTierDetails(){ tierModal.classList.add("hidden"); }
-
-// ---------- TAB ----------
-document.addEventListener("visibilitychange",()=>{
-  tabActive=!document.hidden;
-});
-
-// expose
-Object.assign(window,{
-  navigate,openIframe,closeIframe,showTierDetails,closeTierDetails,vote
-});
-</script>
 </body>
 </html>
